--- a/education/index.html
+++ b/education/index.html
@@ -2,28 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-<<<<<<< HEAD
-=======
   <base href="/Silver-site/">
->>>>>>> ae2990e3934ae6068d2fee780cd98c9f1ce93a56
   <title>Silver Education & Guides</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="SHORT_DESCRIPTION_HERE">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="/../assets/css/style.css">
 </head>
 <body>
   <header>
     <nav>
-<<<<<<< HEAD
-      <a href="/">Home</a> |
-      <a href="/start-here/">Start Here</a> |
-      <a href="/education/">Education</a> |
-      <a href="/buying/">Buying</a> |
-      <a href="/storage/">Storage</a> |
-      <a href="/tools/">Tools</a> |
-      <a href="/articles/">Articles</a> |
-      <a href="/about/">About</a>
-=======
       <a href="./">Home</a> |
       <a href="start-here/">Start Here</a> |
       <a href="education/">Education</a> |
@@ -32,7 +19,6 @@
       <a href="tools/">Tools</a> |
       <a href="articles/">Articles</a> |
       <a href="about/">About</a>
->>>>>>> ae2990e3934ae6068d2fee780cd98c9f1ce93a56
     </nav>
   </header>
   <main>
@@ -47,11 +33,7 @@
       <small>
         Educational content only.
         Some links may be affiliate links.
-<<<<<<< HEAD
-        <a href="/about/">Learn more</a>
-=======
         <a href="about/">Learn more</a>
->>>>>>> ae2990e3934ae6068d2fee780cd98c9f1ce93a56
       </small>
     </p>
   </footer>
