--- a/about/index.html
+++ b/about/index.html
@@ -11,14 +11,14 @@
 <body>
   <header>
     <nav>
-      <a href="/">Home</a> |
-      <a href="/start-here/">Start Here</a> |
-      <a href="/education/">Education</a> |
-      <a href="/buying/">Buying</a> |
-      <a href="/storage/">Storage</a> |
-      <a href="/tools/">Tools</a> |
-      <a href="/articles/">Articles</a> |
-      <a href="/about/">About</a>
+      <a href="./">Home</a> |
+      <a href="start-here/">Start Here</a> |
+      <a href="education/">Education</a> |
+      <a href="buying/">Buying</a> |
+      <a href="storage/">Storage</a> |
+      <a href="tools/">Tools</a> |
+      <a href="articles/">Articles</a> |
+      <a href="about/">About</a>
     </nav>
   </header>
   <main>
