--- a/buying/index.html
+++ b/buying/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <base href="/Silver-site/">
   <title>How to Buy Silver Safely</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="SHORT_DESCRIPTION_HERE">
