--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav>
-      <a href="./">Home</a> |
+      <a href="/">Home</a> |
       <a href="/start-here/">Start Here</a> |
       <a href="/education/">Education</a> |
       <a href="/buying/">Buying</a> |
