Update index for css

--- a/index.html
+++ b/index.html
@@ -10,32 +10,65 @@
 </head>
 <body>
   <header>
-    <nav>
-      <a href="/">Home</a> |
-      <a href="/start-here/">Start Here</a> |
-      <a href="/education/">Education</a> |
-      <a href="/buying/">Buying</a> |
-      <a href="/storage/">Storage</a> |
-      <a href="/tools/">Tools</a> |
-      <a href="/articles/">Articles</a> |
-      <a href="/about/">About</a>
-    </nav>
+    <div class="nav">
+      <div class="brand"><span class="dot"></span>Silver Made Simple</div>
+      <nav class="navlinks">
+        <a href="/">Home</a> |
+        <a href="/education/">Education</a> |
+        <a href="/buying/">Buying</a> |
+        <a href="/storage/">Storage</a> |
+        <a href="/tools/">Tools</a> |
+        <a href="/articles/">Articles</a> |
+        <a href="/about/">About</a>
+      </nav>
+    </div>
   </header>
-  <main>
-    <h1>Silver Made Simple</h1>
-    <p>
-      This page is under construction.
-      Content will focus on clear, beginner-friendly information about silver.
-    </p>
+  <main class="container">
+    <section class="hero">
+      <div class="hero-inner">
+        <div>
+          <span class="kicker"><strong>Educational</strong> · beginner-friendly silver</span>
+          <h1>Silver Made Simple</h1>
+          <p class="lede">Clear, practical info about silver. No hype, just facts and guides.</p>
+          <div class="btnrow">
+            <a class="btn primary" href="/start-here/">Start Here</a>
+            <a class="btn" href="/articles/">Browse Articles</a>
+          </div>
+        </div>
+
+        <aside class="pricebox">
+          <div class="label">Spot Price (coming soon)</div>
+          <div class="price" id="spot">$-</div>
+          <div class="sub">Updates automatically when connected to an API</div>
+        </aside>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="grid">
+        <div class="card">
+          <h3>Education</h3>
+          <p>What spot means, premiums, ETFs vs physical.</p>
+          <a class="more" href="/education/">Learn More →</a>
+        </div>
+        <div class="card">
+          <h3>Buying</h3>
+          <p>Where to buy, what to avoid, best forms.</p>
+          <a class="more" href="/buying/">Learn More →</a>
+        </div>
+        <div class="card">
+          <h3>Storage</h3>
+          <p>Home safe, bank box, insurance basics.</p>
+          <a class="more" href="/storage/">Learn More →</a>
+        </div>
+      </div>
+    </section>
   </main>
+  
   <footer>
-    <p>
-      <small>
-        Educational content only.
-        Some links may be affiliate links.
-        <a href="/about/">Learn more</a>
-      </small>
-    </p>
+    <div class="container">
+      Educational content only. Some links may be affiliate links.
+    </div>
   </footer>
 </body>
 </html>
