Add first article and links

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <div class="grid">
         <div class="card">
           <h3>Education</h3>
-          <p>What spot means, premiums, ETFs vs physical.</p>
-          <a class="more" href="/education/">Learn More →</a>
+          <p>Is silver a good investment for beginners in today's economy?</p>
+          <a class="more" href="/articles/is-silver-a-good-investment-for-beginners.htmnl">Learn More →</a>
         </div>
         <div class="card">
           <h3>Buying</h3>
