Updated url structure for articles

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="card">
           <h3>Education</h3>
           <p>Is silver a good investment for beginners in today's economy?</p>
-          <a class="more" href="/articles/is-silver-a-good-investment-for-beginners.htmnl">Learn More →</a>
+          <a class="more" href="/articles/is-silver-a-good-investment-for-beginners/">Learn More →</a>
         </div>
         <div class="card">
           <h3>Buying</h3>
